--- a/september-util/pom.xml
+++ b/september-util/pom.xml
@@ -11,7 +11,7 @@
     <url>http://maven.apache.org</url>
 
     <properties>
-        <geco.septemberutil.version>0.1</geco.septemberutil.version>
+        <geco.septemberutil.version>0.2-SNAPSHOT</geco.septemberutil.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <geco.requests.version>0.4</geco.requests.version>
         <geco.util.version>0.4.2</geco.util.version>
