[GECO-90] updated to latest requests version

--- a/september-util/pom.xml
+++ b/september-util/pom.xml
@@ -11,9 +11,9 @@
     <url>http://maven.apache.org</url>
 
     <properties>
-        <geco.septemberutil.version>0.2-SNAPSHOT</geco.septemberutil.version>
+        <geco.septemberutil.version>0.2</geco.septemberutil.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <geco.requests.version>0.4</geco.requests.version>
+        <geco.requests.version>0.6</geco.requests.version>
         <geco.util.version>0.4.2</geco.util.version>
     </properties>
 
