--- a/september-util/pom.xml
+++ b/september-util/pom.xml
@@ -13,21 +13,21 @@
     <properties>
         <geco.septemberutil.version>0.2</geco.septemberutil.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <geco.requests.version>0.6</geco.requests.version>
-        <geco.util.version>0.4.2</geco.util.version>
+        <geco.requests.version>0.8</geco.requests.version>
+        <geco.util.version>0.5</geco.util.version>
     </properties>
 
     <dependencies>
 
         <!-- Giles Ecosystem -->
         <dependency>
-            <groupId>edu.asu.diging.giles-eco</groupId>
-            <artifactId>requests</artifactId>
+            <groupId>edu.asu.diging</groupId>
+            <artifactId>giles-eco-requests</artifactId>
             <version>${geco.requests.version}</version>
         </dependency>
         <dependency>
-            <groupId>edu.asu.diging.giles-eco</groupId>
-            <artifactId>util</artifactId>
+            <groupId>edu.asu.diging</groupId>
+            <artifactId>giles-eco-util</artifactId>
             <version>${geco.util.version}</version>
         </dependency>
 
