--- a/september-util/pom.xml
+++ b/september-util/pom.xml
@@ -42,6 +42,11 @@
             <artifactId>mockito-all</artifactId>
             <version>1.8.5</version>
         </dependency>
+        <dependency>
+		    <groupId>javax.annotation</groupId>
+		    <artifactId>javax.annotation-api</artifactId>
+		    <version>1.3.2</version>
+   		</dependency>
 
     </dependencies>
 
